add mapStruct example